// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> debe de mostrar items cuando se cargan imágenes de useFetchGifs 1`] = `
<div>
  <h3>
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquiercosa.jpg"
    />
  </div>
</div>
`;

exports[`Pruebas en <GifGrid/> debe de mostrarse correctamente 1`] = `
<div>
  <h3>
    One Punch
  </h3>
  <p>
     loading
  </p>
  <div
    className="card-grid"
  />
</div>
`;
